Estructura html con el segundo punto realizado (card)

--- a/index.html
+++ b/index.html
@@ -16,5 +16,12 @@
         </ul>
     </nav>
 
+    <div class="card">
+        <img src="img/tanjiro.png" alt="tanjiro" class="card__image">
+        <p class="card__description">Best funko for Tanjiro kimetsu no yaiba</p>
+        <button class="card__button--buy">
+            Buy
+        </button>
+    </div>
 </body>
 </html>
