Se realizo la estructura de la galeria de imagenes

--- a/index.html
+++ b/index.html
@@ -23,5 +23,37 @@
             Buy
         </button>
     </div>
+
+    <div class="gallery">
+
+        <div class="gallery__item">
+            <img src="img/dragonball_1.jpg" alt="Imagen 1" class="gallery__image">
+        </div>
+
+        <div class="gallery__item">
+            <img src="img/dragonball_2.jpg" alt="Imagen 2" class="gallery__image">
+        </div>
+
+        <div class="gallery__item">
+            <img src="img/dragonball_3.jpg" alt="Imagen destacada" class="gallery__image">
+        </div>
+
+        <div class="gallery__item">
+            <img src="img/dragonball_4.jpg" alt="" class="gallery__image">
+        </div>
+
+        <div class="gallery__item">
+            <img src="img/dragonball_5.jpg" alt="" class="gallery__image">
+        </div>
+
+        <div class="gallery__item">
+            <img src="img/dragonball_6.jpg" alt="" class="gallery__image">
+        </div>
+
+        <div class="gallery__item">
+            <img src="img/dragonball_7.jpg" alt="" class="gallery__image">
+        </div>
+    </div>
+
 </body>
 </html>
