Se realizo la estructura del formulario en el html

--- a/index.html
+++ b/index.html
@@ -55,5 +55,24 @@
         </div>
     </div>
 
+    <form class="form">
+        <h2 class="form__title">Contact</h2>
+        <div class="form__field">
+            <label for="name">Name:</label>
+            <input class="form__input" type="text" id="name" placeholder="Write your fullname">
+        </div>
+
+        <div class="form__field">
+            <label for="telephone">Number:</label>
+            <input class="form__input" type="tel" id="telephone" placeholder="Write your telephone number">
+        </div>
+
+        <div class="form__field">
+            <label for="email">Email:</label>
+            <input class="form__input" type="email" id="email" placeholder="Write your email">
+        </div>
+        <button class="form_button--submit">Submit</button>
+    </form>
+
 </body>
 </html>
