Se agrego un section header en la estructura HTML

--- a/index.html
+++ b/index.html
@@ -74,5 +74,13 @@
         <button class="form_button--submit">Submit</button>
     </form>
 
+<section class="section__header">
+    <div class="section__icons">
+        
+        <img class="section__icon" src="img/tanjiro.png" alt="Icono de ejemplo">
+    </div>
+    <h2 class="section__title">Título de la sección</h2>
+</section>
+
 </body>
 </html>
