Agregue la estructura de una lista de tareas en el HTML haciendo uso de BEM

--- a/index.html
+++ b/index.html
@@ -76,10 +76,20 @@
 
 <section class="section__header">
     <div class="section__icons">
-        
+
         <img class="section__icon" src="img/tanjiro.png" alt="Icono de ejemplo">
     </div>
     <h2 class="section__title">Título de la sección</h2>
+</section>
+
+<section class="tasks">
+    <h2 class="tasks__title">Lista de tareas</h2>
+    <ul class="tasks__list">
+        <li class="tasks__item">Preparar presentación</li>
+        <li class="tasks__item">Organizar inventario</li>
+        <li class="tasks__item">Responder correos</li>
+        <li class="tasks__item">Revisar reportes</li>
+    </ul>
 </section>
 
 </body>
