Estructura testimonial agregado en el HTML

--- a/index.html
+++ b/index.html
@@ -92,5 +92,19 @@
     </ul>
 </section>
 
+<section class="testimonial">
+    <div class="testimonial__avatar">
+        <img src="img/tanji.png" alt="Foto del cliente">
+    </div>
+    <div class="testimonial__content">
+        <p class="testimonial__text">
+        “El servicio fue excelente, superó nuestras expectativas y definitivamente volveremos a contratarlo.”
+        </p>
+        <p class="testimonial__author">— Carlos Aveiro</p>
+        <p class="testimonial__role">CEO, Empresa Ejemplo</p>
+    </div>
+</section>
+
+
 </body>
 </html>
