--- a/index.html
+++ b/index.html
@@ -105,6 +105,29 @@
     </div>
 </section>
 
+<footer class="footer">
+    <div class="footer__column">
+        <h3 class="footer__title">Docs</h3>
+        <ul class="footer__list">
+            <li class="footer_list--item"><a class="footer__list--link" href="#">PDF</a></li>
+        </ul>
+    </div>
+
+    <div class="footer__column">
+        <h3 class="footer__title">Manage cookies</h3>
+        <ul class="footer__list">
+            <li class="footer_list--item"><a class="footer__list--link" href="#">Read the info</a></li>
+        </ul>
+    </div>
+
+    <div class="footer__column">
+        <h3 class="footer__title">Contact</h3>
+        <ul class="footer__list">
+            <li class="footer_list--item"><a class="footer__list--link" href="#">Click to the info</a></li>
+        </ul>
+    </div>
+</footer>
+
 
 </body>
 </html>
