Seccion de precios agregada en el HTML

--- a/index.html
+++ b/index.html
@@ -128,6 +128,58 @@
     </div>
 </footer>
 
+<div class="cards">
+    <div class="card_price">
+        <img src="img/tanjiro.png" alt="tanjiro" class="card__images">
+        <p class="card__description">Best funko for Tanjiro kimetsu no yaiba</p>
+        <button class="card__button--buy">Price: 5$</button>
+    </div>
+
+    <div class="card_price">
+        <img src="img/tanjiro.png" alt="tanjiro" class="card__images">
+        <p class="card__description">Best funko for Tanjiro kimetsu no yaiba</p>
+        <button class="card__button--buy">Price: 5$</button>
+    </div>
+
+    <div class="card_price">
+        <img src="img/tanjiro.png" alt="tanjiro" class="card__images">
+        <p class="card__description">Best funko for Tanjiro kimetsu no yaiba</p>
+        <button class="card__button--buy">Price: 5$</button>
+    </div>
+
+    <div class="card_price">
+        <img src="img/tanjiro.png" alt="tanjiro" class="card__images">
+        <p class="card__description">Best funko for Tanjiro kimetsu no yaiba</p>
+        <button class="card__button--buy">Price: 5$</button>
+    </div>
+
+    <div class="card_price">
+        <img src="img/tanjiro.png" alt="tanjiro" class="card__images">
+        <p class="card__description">Best funko for Tanjiro kimetsu no yaiba</p>
+        <button class="card__button--buy">Price: 5$</button>
+    </div>
+
+    <div class="card_price">
+        <img src="img/tanjiro.png" alt="tanjiro" class="card__images">
+        <p class="card__description">Best funko for Tanjiro kimetsu no yaiba</p>
+        <button class="card__button--buy">Price: 5$</button>
+    </div>
+
+    <div class="card_price">
+        <img src="img/tanjiro.png" alt="tanjiro" class="card__images">
+        <p class="card__description">Best funko for Tanjiro kimetsu no yaiba</p>
+        <button class="card__button--buy">Price: 5$</button>
+    </div>
+
+    <div class="card_price">
+        <img src="img/tanjiro.png" alt="tanjiro" class="card__images">
+        <p class="card__description">Best funko for Tanjiro kimetsu no yaiba</p>
+        <button class="card__button--buy">Price: 5$</button>
+    </div>
+
+    
+</div>
+
 
 </body>
 </html>
