Sidebar agregado a la estructura HTML

--- a/index.html
+++ b/index.html
@@ -105,29 +105,6 @@
     </div>
 </section>
 
-<footer class="footer">
-    <div class="footer__column">
-        <h3 class="footer__title">Docs</h3>
-        <ul class="footer__list">
-            <li class="footer_list--item"><a class="footer__list--link" href="#">PDF</a></li>
-        </ul>
-    </div>
-
-    <div class="footer__column">
-        <h3 class="footer__title">Manage cookies</h3>
-        <ul class="footer__list">
-            <li class="footer_list--item"><a class="footer__list--link" href="#">Read the info</a></li>
-        </ul>
-    </div>
-
-    <div class="footer__column">
-        <h3 class="footer__title">Contact</h3>
-        <ul class="footer__list">
-            <li class="footer_list--item"><a class="footer__list--link" href="#">Click to the info</a></li>
-        </ul>
-    </div>
-</footer>
-
 <div class="cards">
     <div class="card_price">
         <img src="img/tanjiro.png" alt="tanjiro" class="card__images">
@@ -180,6 +157,39 @@
     
 </div>
 
+<aside class="sidebar">
+    <nav class="sidebar__nav">
+        <ul class="sidebar__list">
+            <li class="sidebar__item"><a href="#" class="sidebar__link sidebar__link--active">Inicio</a></li>
+            <li class="sidebar__item"><a href="#" class="sidebar__link">Proyectos</a></li>
+            <li class="sidebar__item"><a href="#" class="sidebar__link">Tareas</a></li>
+            <li class="sidebar__item"><a href="#" class="sidebar__link">Equipo</a></li>
+        </ul>
+    </nav>
+</aside>
+
+<footer class="footer">
+    <div class="footer__column">
+        <h3 class="footer__title">Docs</h3>
+        <ul class="footer__list">
+            <li class="footer_list--item"><a class="footer__list--link" href="#">PDF</a></li>
+        </ul>
+    </div>
+
+    <div class="footer__column">
+        <h3 class="footer__title">Manage cookies</h3>
+        <ul class="footer__list">
+            <li class="footer_list--item"><a class="footer__list--link" href="#">Read the info</a></li>
+        </ul>
+    </div>
+
+    <div class="footer__column">
+        <h3 class="footer__title">Contact</h3>
+        <ul class="footer__list">
+            <li class="footer_list--item"><a class="footer__list--link" href="#">Click to the info</a></li>
+        </ul>
+    </div>
+</footer>
 
 </body>
 </html>
